# dodo_paymnets

./: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml  readme.md
src/: main.rs  models.rs  schema.rs  utils.rs
src/handlers/: transaction.rs  user.rs
src/tests/: mod.rs  transaction.rs  user.rs
